Updated project description for Real-time Chat App

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             />
             <div class="p-6">
               <h3 class="text-xl font-semibold text-gray-800 mb-3">
-                Secure Authentication & Role-Based Dashboard
+                Secure Authentication & Role-Based APIs
               </h3>
               <p class="text-gray-600 mb-4">
                 A backend with JWT-based authentication, role-based access
@@ -435,28 +435,33 @@
             />
             <div class="p-6">
               <h3 class="text-xl font-semibold text-gray-800 mb-3">
-                Social Media Dashboard
+                Real-Time Chat Applicatio
               </h3>
               <p class="text-gray-600 mb-4">
-                Analytics dashboard for social media metrics with data
-                visualization and reporting features.
+                A full-stack real-time chat application supporting multiple
+                users, private messaging, typing indicators, and online user
+                tracking using WebSockets.
               </p>
               <div class="mb-4">
                 <span
                   class="inline-block bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full mr-2 mb-2"
-                  >Java</span
+                  >Node.js</span
                 >
                 <span
                   class="inline-block bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full mr-2 mb-2"
-                  >Spring Boot</span
+                  >Express.js</span
                 >
                 <span
                   class="inline-block bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full mr-2 mb-2"
-                  >MySQL</span
+                  >Socket.io</span
                 >
                 <span
                   class="inline-block bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full mr-2 mb-2"
-                  >React</span
+                  >MongoDB</span
+                >
+                <span
+                  class="inline-block bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full mr-2 mb-2"
+                  >WebSockets</span
                 >
               </div>
               <div class="flex space-x-4">
@@ -467,7 +472,7 @@
                   <i class="fas fa-external-link-alt mr-2"></i>Live Demo
                 </a>
                 <a
-                  href="#"
+                  href="https://github.com/sunny-raj-sah/Real-time-chat-app"
                   class="text-gray-600 hover:text-gray-800 transition-colors"
                 >
                   <i class="fab fa-github mr-2"></i>GitHub
