--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             />
             <div class="p-6">
               <h3 class="text-xl font-semibold text-gray-800 mb-3">
-                Real-Time Chat Applicatio
+                Real-Time Chat App
               </h3>
               <p class="text-gray-600 mb-4">
                 A full-stack real-time chat application supporting multiple
@@ -462,6 +462,14 @@
                 <span
                   class="inline-block bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full mr-2 mb-2"
                   >WebSockets</span
+                >
+                <span
+                  class="inline-block bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full mr-2 mb-2"
+                  >HTML5</span
+                >
+                <span
+                  class="inline-block bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full mr-2 mb-2"
+                  >JavaScript</span
                 >
               </div>
               <div class="flex space-x-4">
